Closed Bug 304006 Opened 20 years ago Closed 20 years ago

Bookmark folder state not remembered when switching between collections

Categories

(Camino Graveyard :: Bookmarks, defect, P3)

PowerPC
macOS

Tracking

(Not tracked)

RESOLVED FIXED
Camino1.0

People

(Reporter: alqahira, Assigned: sfraser_bugs)

Details

(Keywords: fixed1.8)

Different (but perhaps related) to the remaining part of bug 293768: when switching between bookmarks collections, the folder state is not remembered. STR: 1. Open BM and expand a folder in the Bookmarks Menu. 2. Switch to the Bookmarks Toolbar. 3. Switch back to the Bookmarks Menu. Results: Folder no longer expanded. Expected Results: Folder remains expanded. Add a few interactions and it gets more complex: Switching between a collection and History does the right thing normally but... 1. Open BM and expand a folder in the Bookmarks Menu. 2. Switch to History. 3. Switch back to the Bookmarks Menu. (so far, so good; expansion remembered) 4. Switch to Bookmarks Bar. 5. Switch to History. 6. Switch back to Bookmarks Menu. (no expansion) 7. Switch to History 8. Switch back to Bookmarks Menu (expansion remembered suddenly!) 9. Switch to Bookmarks Bar. 10. Switch back to Bookmarks Menu (no expansion) 11. Expand a different folder. 12. Switch to History. 13. Switch back to Bookmarks Menu (expansion state 1 (8) + 11 recreated! It's additive?) I think you can switch Bookmarks Menu and Bookmarks Bar and get the same results. There's probably a more complex test to run trying to expand folders in both Bookmarks collections at the same time, but that's beyond what my brain can think out.... Bonus points (or maybe this is the fix?): remember the expanded folders in each bookmark collection separately.
Assignee: pinkerton → sfraser_bugs
Status: NEW → ASSIGNED
Priority: -- → P3
Target Milestone: --- → Camino1.0
Fixed by making sure that we restore the folder states _after_ the reloadData. Checked in to trunk and branch.
Status: ASSIGNED → RESOLVED
Closed: 20 years ago
Keywords: fixed1.8
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.