Fix bug 304006: fix the restoration of folder expanded states when clicking between collections, by ensuring that we restore them after -reloadData.